Fix problem with timeline and abbr z-index

--- a/app/javascript/app/components/country/country-timeline/country-timeline-styles.scss
+++ b/app/javascript/app/components/country/country-timeline/country-timeline-styles.scss
@@ -16,7 +16,9 @@
 .timelineContainer {
   overflow-x: hidden;
 
-  @include overflowFix(80px);
+  &.opened {
+    @include overflowFix(80px);
+  }
 }
 
 .timeline { // overwriting timeline styles
